Added base for list of shapes currently in the tracer
+ Shapes are added to a list to show what will be traced
+ User can clear the shapes out of the tracer
+ Added a little bit better "polymorphism" to the math shape primitives

* Deleting individual shapes is not completely implemented yet

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -31,8 +31,8 @@ body{
 }
 
 button{
-   background: white;
-   border: 0px;
+   background: #ccccff;
+   border: 1px solid;
    padding-left: 1em;
    padding-right: 1em;
    padding-top: 0.5em;
@@ -81,4 +81,8 @@ input{
    display: inline-block;
    width: auto;
    background-color: #cccccc;
+}
+
+#shapes{
+   width: 200px;
 }
